--- a/projects/01_fyyur/starter_code/templates/pages/show_venue.html
+++ b/projects/01_fyyur/starter_code/templates/pages/show_venue.html
@@ -4,7 +4,7 @@
 <div class="row">
 	<div class="col-sm-6">
 		<h1 class="monospace">
-			{{ venue.name }}
+			{{ venue.name }} 
 		</h1>
 		<p class="subtitle">
 			ID: {{ venue.id }}
@@ -76,6 +76,15 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<form>
+    <input type="submit"
+           value="Delete Venue"
+           class="btn btn-primary btn-lg btn-block"
+           formmethod="POST"
+           formaction="{{ url_for('delete_venue', venue_id=venue.id) }}">
+</form>
+
+<!-- <a href="/venues/{{ venue.id }}/delete"><button class="btn btn-primary btn-lg">delete</button></a> -->
 
 {% endblock %}
 
