--- a/projects/fyyur/code/static/css/layout.main.css
+++ b/projects/fyyur/code/static/css/layout.main.css
@@ -4,6 +4,7 @@
 html,
 body {
   height: 100%;
+  background-color: rgb(245, 202, 123);
   /* The html and body elements cannot have any padding or margin. */
 }
 
