--- a/projects/fyyur/code/static/css/main.css
+++ b/projects/fyyur/code/static/css/main.css
@@ -10,6 +10,8 @@
  ****************************************************************************/
 html {
   overflow-y: scroll;
+  background: black;
+  
 }
 section {
   margin: 50px 0;
@@ -57,7 +59,7 @@ p.lead {
   box-shadow: none;
   border-bottom: none;
   padding-top: 10px;
-  background-color: white;
+  background-color: rgb(245, 202, 123);
 }
 .navbar-nav .search {
   margin-top: 6px;
@@ -161,13 +163,13 @@ span.genre {
   display: inline-block;
   font-family: monospace;
   padding: 4px 8px;
-  background: #f0f0f0;
+  background: #000000;
   margin: 0 5px 5px 0;
   border-radius: 3px;
-  color: #676767;
+  color: #ffffff;
   font-size: 0.9em;
   text-transform: uppercase;
-  border: solid 1px #eee;
+  border: solid 1px rgb(0, 0, 0);
 }
 .monospace {
   font-family: monospace;
