--- a/projects/fyyur/code/templates/layouts/main.html
+++ b/projects/fyyur/code/templates/layouts/main.html
@@ -15,14 +15,15 @@
 <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.responsive.css" />
 <link type="text/css" rel="stylesheet" href="/static/css/main.quickfix.css" />
+
 <!-- /styles -->
 
 <!-- favicons -->
 <link rel="shortcut icon" href="/static/ico/favicon.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" href="/static/ico/favicon.png">
 <link rel="shortcut icon" href="/static/ico/favicon.png">
 <!-- /favicons -->
 
@@ -87,7 +88,7 @@
     </div>
 
     <!-- Begin page content -->
-    <main id="content" role="main" class="container">
+    <main id="content" role="main" class="container" >
 
       {% with messages = get_flashed_messages() %}
         {% if messages %}
